    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 241 - 15/01/2008 <==

B <mave> resolved problem on nnfw-confin on Mac OSX
+ <mave> implemented BaseNeuralNet::clone()
C <mave> now the setOrder accept 'const UpdatableVec&'
+ <mave> added propertySettings method for retrieving the current status of Propertized objects
- <mave> deleted uility for creating backpropagation algorithm
- <mave> deleted modifier and subclasses;
		it seem enough the deltarule methods added to RealVec & RealMat
- <mave> deleted all classes of previous implementation of learning algorithms
B <mave> resolved a bug in feedForwardNet utility
+ <mave> added assign_reverse method to VectorData that assign the element in revers order
+ <mave> completed the first version of BackPropagationAlgo

    ==> 240 - 10/12/2007 <==

C <mave> changed CMakeLists.txt for better support on Mac OSX

    ==> 238 - 3/12/2007 <==

+ <mave> Propertized and all its subclasses are now clonable via clone() method
+ <mave> added const versions of Cluster::inputs and ::outputs methods
C <mave> Cluster::isAccumulate and ::getFunction now are const methods as suppose to be
C <mave> Updatable::name now is a const method as suppose to be

    ==> 236 - 29/10/2007 <==

C <mave> scale, square, normalize, neg and step RealVec methods now returns a reference to itself

    ==> 234 - 13/09/2007 - 0.9.3 release  <==

+ <mave> added norm and normalize for RealMat
B <mave> fixed a bug in GaussFunction constructor (Propertized version)
+ <mave> added LinearComboFunction
B <mave> fixed visibility bug in doxygen comments

    ==> 230 - 6/08/2007 - 0.9.2 release  <==
